--- a/README
+++ b/README
@@ -1,9 +1,7 @@
 IP2Location (PHP Module)
 ========================
 
-This PHP module provides fast lookup of country, region, city, latitude, longitude, ZIP code, time zone, ISP, domain name, connection speed, IDD code, area code, weather station code, weather station name, mcc, mnc, mobile brand, elevation, and usage type from IP address by using IP2Location database. This module uses a file based database available at IP2Location.com. 
-
-This database simply contains IP blocks as keys, and other information such as country, region, city, latitude, longitude, ISP and domain name as values.
+This PHP module provides fast lookup of country, region, city, latitude, longitude, ZIP code, time zone, ISP, domain name, connection speed, IDD code, area code, weather station code, weather station name, MNC, MCC, mobile brand, elevation, and usage type from IP address by using IP2Location database. This module uses a file based database available at IP2Location.com. 
 
 This module can be used in many types of projects such as:
 
@@ -15,7 +13,7 @@ This module can be used in many types of projects such as:
  6) prevent password sharing and abuse of service 
  7) geotargeting in advertisement
 
-The database will be updated in monthly basis for the greater accuracy. Free sample database is available at /samples directory or download it from http://www.ip2location.com/developers.aspx.
+The database will be updated in monthly basis for the greater accuracy. Free sample database is available at /samples directory or download it from http://www.ip2location.com/developers.
 
 The complete database is available at http://www.ip2location.com under Premium subscription package. This module also support IP2Location IPv6 version.
 
@@ -23,12 +21,12 @@ The complete database is available at http://www.ip2location.com under Premium s
 INSTALLATION
 
 To install this module, unzip the package and copy the following files to your web folder.
- i)   ip2location.class.php
- ii)  sample.php
+ i)   IP2Location.php
+ ii)  example.php
  iii) databases/IP-COUNTRY-SAMPLE.BIN
  iv)  databases/IPV6-COUNTRY.SAMPLE.BIN
  
-To test this installation, please browse sample.php using web browser.
+To test this installation, please browse example.php using web browser.
 
 
 DEPENDENCIES
