--- a/README
+++ b/README
@@ -19,21 +19,37 @@ The complete database is available at http://www.ip2location.com under Premium s
 
 
 INSTALLATION
-
+============
 To install this module, unzip the package and copy the following files to your web folder.
  i)   IP2Location.php
  ii)  example.php
  iii) databases/IP-COUNTRY-SAMPLE.BIN
- iv)  databases/IPV6-COUNTRY.SAMPLE.BIN
+ iv)  databases/IPV6-COUNTRY-SAMPLE.BIN
  
 To test this installation, please browse example.php using web browser.
 
 
-DEPENDENCIES
+NOTE
+=====
+This module require php_gmp extension. Please find the below procedures to enable the module.
 
+For Windows environment:
+------------------------
+Uncomment the extension in php.ini by removing the semi-colon
+;extension=php_gmp.dll
+
+
+For Linux/Mac envionment:
+-------------------------
+install the php5-gmp package
+
+
+
+DEPENDENCIES
+=============
 The complete database is available at http://www.ip2location.com under subscription package.
 
 
 COPYRIGHT AND LICENCE
-
-Copyright (C) 2005-2013 by IP2Location.com, support@ip2location.com
+=====================
+Copyright (C) 2005-2014 by IP2Location.com, support@ip2location.com
