--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Revision History for PHP Module for IP2Location
 
+7.2.3 Wed Aug 12 10:29:37 2015
+	* Fixes:
+
+	- Fix IPv4 lookup issue.
+
 7.2.2 Thu Jul 30 10:27:55 2015
 	* Fixes:
 
