--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Revision History for PHP Module for IP2Location
 
+7.2.4 Wed Jan 06 14:44:23 2016
+	* Fixes:
+
+	- Fixed IPv6 lookup issue.
+
 7.2.3 Wed Aug 12 10:29:37 2015
 	* Fixes:
 
