--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 Revision History for PHP Module for IP2Location
+8.0.0 Tue Jul 5 10:00:00 2016
+	* Fixes
+	
+	- Add code to lookup for index section which available in new BIN format 
+	
 7.2.5 Fri Jun 10 15:40:23 2016
 	* Fixes:
 	
