--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 Revision History for PHP Module for IP2Location
+8.2.0 Thu Mar 19 10:16:00 2020
+	* Fixes
+
+	- Added IP2Location web service lookup.
+
 8.1.1 Wed Oct 09 08:58:00 2019
 	* Fixes
 	
